[2019/8/26] Added chisel, to chisel text into stone. Use while you have a hammer in the slot to the right of the chisel. Good for writing text that you don't want to be discovered right away unless player points right at it.
[2019/8/26] Player can no longer fall of the end of a rope. Also added in the 4 extra ropeblocks from the original mod. Fixed some bugs.
[2019/8/26] Added a bit of randomness to bonebox signal messages.
[2019/8/25] Discovered and fixed a vending bug, where bought item would not be given to player!
[2019/8/25] Added fake "trap" ladders.
[2019/8/25] Player gets stung if they take honey from hive, but someone else owns the land its on.
[2019/8/25] Bees now need full sunlight nearby in order to make honey. They hibernate if sunlight is not available.
[2019/8/24] Chest/door hinges can now be oiled to suppress the sound when they're opened or closed.
[2019/8/23] Teleports now have a (small) chance to randomly teleport the player to a random target teleport. This chance increases if there are many teleports in a small area.
[2019/8/23] The Key of Citizenship now binds to its owner when crafted, or on first use. Only its owner can use it.
[2019/8/22] Added Key of Citizenship, as an upgrade to the PoC. Naturally the PoC interface moved to the KoC.
[2019/8/20] Oil extract recipe now requires a compressor.
[2019/8/20] Added tooltips to the market booth formspec which should hopefully explain some stuff.
[2019/8/20] Shop advertisements no longer expire after any amount of time.
[2019/8/20] Added ability to delete a shop advertisement for a refund of the cost.
[2019/8/18] Polished up the vending & remote trading systems, added a fungible currency with special handling functions. Fixed bugs (lots of!).
[2019/8/16] Added a remote-trading system using the market booths, version 0.1 (very complex, there may be bugs).
[2019/8/10] Made protector fields glow in the dark.
[2019/8/10] Added armor stands.